Added initial angular code and updated html doc.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div id="userName">
                 <label for="user">Name:</labelfor> <input name="user" id="user" type="text" placeholder="Last, First Name">
             </div> <!-- div for Developer's Name  -->
-            <div id="surveyInput">
+            <div id="surveyInput" ng-controller="surveyCtrl">
 
             </div>
         </div>
